# hostctl

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  lazybuild.bat  lazybuild.sh  main.cpp
src/: main.cpp
src/ServerManager/: server_manager.cpp  server_manager.hpp
src/ServiceHelper/: serviceHelper.cpp  serviceHelper.h
src/ThemeManager/: themes.cpp  themes.h
src/fonts/: rubik.h
tests/test-1/: index.html
